include/dss_capi.h

    DSS_CAPI_DLL void Loads_Set_NumCust(int32_t Value);
    DSS_CAPI_DLL void Loads_Set_PctMean(double Value);
    DSS_CAPI_DLL void Loads_Set_PctStdDev(double Value);
    DSS_CAPI_DLL void Loads_Set_Rneut(double Value);
    DSS_CAPI_DLL void Loads_Set_Spectrum(char* Value);
    DSS_CAPI_DLL void Loads_Set_Status(int32_t Value);
    DSS_CAPI_DLL void Loads_Set_Vmaxpu(double Value);
    DSS_CAPI_DLL void Loads_Set_Vminemerg(double Value);
    DSS_CAPI_DLL void Loads_Set_Vminnorm(double Value);
    DSS_CAPI_DLL void Loads_Set_Vminpu(double Value);
    DSS_CAPI_DLL void Loads_Set_xfkVA(double Value);
    DSS_CAPI_DLL void Loads_Set_Xneut(double Value);
    DSS_CAPI_DLL void Loads_Set_Yearly(char* Value);
    /*
    Array of 7 doubles with values for ZIPV property of the LOAD object
    */
    DSS_CAPI_DLL void Loads_Get_ZIPV(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Loads_Get_ZIPV but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Loads_Get_ZIPV_GR(void);
    DSS_CAPI_DLL void Loads_Set_ZIPV(double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL double Loads_Get_pctSeriesRL(void);
    /*
    Percent of Load that is modeled as series R-L for harmonics studies
    */
    DSS_CAPI_DLL void Loads_Set_pctSeriesRL(double Value);
    /*
    Relative Weighting factor for the active LOAD
    */
    DSS_CAPI_DLL double Loads_Get_RelWeight(void);
    /*
    Relative Weighting factor for the active LOAD
    */
    DSS_CAPI_DLL void Loads_Set_RelWeight(double Value);
    /*
    Name of the sensor monitoring this load.
    */
    DSS_CAPI_DLL char* Loads_Get_Sensor(void);
    DSS_CAPI_DLL int32_t Loads_Get_Phases(void);
    DSS_CAPI_DLL void Loads_Set_Phases(int32_t Integer);