src/CAPI/CAPI_Loads.pas


    if (Value >= Ord(Low(TLoadModel))) and (Value <= Ord(High(TLoadModel))) then
        elem.FLoadModel := TLoadModel(Value)
    else
        DoSimpleMsg(DSSPrime, 'Invalid load model (%d).', [Value], 5004);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_NumCust(Value: Integer); CDECL;
begin
    Set_Parameter(DSSPrime, ord(TLoadProp.NumCust), Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_PctMean(Value: Double); CDECL;
begin
    Set_Parameter(DSSPrime, ord(TLoadProp.pctmean), Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_PctStdDev(Value: Double); CDECL;
begin
    Set_Parameter(DSSPrime, ord(TLoadProp.pctstddev), Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Rneut(Value: Double); CDECL;
begin
    Set_Parameter(DSSPrime, ord(TLoadProp.Rneut), Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Spectrum(const Value: PAnsiChar); CDECL;
begin
    Set_Parameter(DSSPrime, ord(High(TLoadProp)) + ord(TPCElementProp.Spectrum), Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Status(Value: Integer); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    case Value of
        dssLoadVariable:
            elem.status := TLoadStatus.Variable;
        dssLoadFixed:
            elem.status := TLoadStatus.Fixed;
        dssLoadExempt:
            elem.status := TLoadStatus.Exempt;
    end;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Vmaxpu(Value: Double); CDECL;
begin
    Set_Parameter(DSSPrime, ord(TLoadProp.VmaxPu), Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Vminemerg(Value: Double); CDECL;
begin
    Set_Parameter(DSSPrime, ord(TLoadProp.VminEmerg), Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Vminnorm(Value: Double); CDECL;
begin
    Set_Parameter(DSSPrime, ord(TLoadProp.VminNorm), Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Vminpu(Value: Double); CDECL;
begin
    Set_Parameter(DSSPrime, ord(TLoadProp.VminPu), Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_xfkVA(Value: Double); CDECL;
begin
    Set_Parameter(DSSPrime, ord(TLoadProp.XfKVA), Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Xneut(Value: Double); CDECL;
begin
    Set_Parameter(DSSPrime, ord(TLoadProp.Xneut), Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Yearly(const Value: PAnsiChar); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.YearlyShapeObj := DSSPrime.LoadShapeClass.Find(Value);
    elem.PropertySideEffects(ord(TLoadProp.yearly));
end;
//------------------------------------------------------------------------------
procedure Loads_Get_ZIPV(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    DSS_RecreateArray_PDouble(ResultPtr, ResultCount, elem.nZIPV);
    Move(elem.ZipV[1], ResultPtr^, elem.nZIPV * SizeOf(Double));
end;

procedure Loads_Get_ZIPV_GR(); CDECL;
// Same as Loads_Get_ZIPV but uses global result (GR) pointers
begin
    Loads_Get_ZIPV(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;
//------------------------------------------------------------------------------
procedure Loads_Set_ZIPV(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    elem: TObj;
begin
    if ValueCount <> 7 then
    begin
        DoSimpleMsg(DSSPrime, 'ZIPV requires 7 elements, %d were provided!', [ValueCount], 5890);
        Exit;
    end;

    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.ZIPVset := True;
    Move(ValuePtr[0], elem.ZIPV[1], elem.nZIPV * SizeOf(Double));
end;
//------------------------------------------------------------------------------
function Loads_Get_pctSeriesRL(): Double; CDECL;
var
    elem: TObj;
begin
    Result := -1.0; // signify  bad request
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.puSeriesRL * 100.0;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_pctSeriesRL(Value: Double); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.puSeriesRL := Value / 100.0;
end;
//------------------------------------------------------------------------------
function Loads_Get_RelWeight(): Double; CDECL;
var
    elem: TObj;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.RelWeighting;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_RelWeight(Value: Double); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.RelWeighting := Value;
end;
//------------------------------------------------------------------------------
function Loads_Get_Phases(): Integer; CDECL;
var
    pLoad: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, pLoad) then
        Exit;
    Result := pLoad.Nphases;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Phases(Value: Integer); CDECL;
var
    elem: TObj;
    prevVal: Integer;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    
    if Value < 1 then
    begin
        DoSimpleMsg(DSSPrime, '%s: Number of phases must be a positive integer!', [elem.FullName], 6568);
        Exit;
    end;
    if (Value <> elem.NPhases) then
    begin
        prevVal := elem.FNPhases;
        elem.FNPhases := Value;
        elem.PropertySideEffects(ord(TLoadProp.phases), prevVal);
    end;
end;
//------------------------------------------------------------------------------
function Loads_Get_Bus1(): PAnsiChar; CDECL;
var
    pLoad: TObj;
begin
    Result := NIL;
    if not _activeObj(DSSPrime, pLoad) then
        Exit;
    Result := DSS_GetAsPAnsiChar(DSSPrime, pLoad.GetBus(1));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Bus1(const Value: PAnsiChar); CDECL;
var
    pLoad: TObj;
begin
    if not _activeObj(DSSPrime, pLoad) then
        Exit;
    pLoad.SetBus(1, Value);
    pLoad.PropertySideEffects(ord(TLoadProp.bus1));
end;
//------------------------------------------------------------------------------
function Loads_Get_Sensor(): PAnsiChar; CDECL;
var
    pLoad: TObj;
begin
    Result := NIL;
    if not _activeObj(DSSPrime, pLoad) then
        Exit;

    if (pLoad.SensorObj <> NIL) and (pLoad.SensorObj.MeteredElement <> NIL) then
        Result := DSS_GetAsPAnsiChar(DSSPrime, LowerCase(pLoad.SensorObj.MeteredElement.FullName));
end;
//------------------------------------------------------------------------------
end.
